# an_encoder_decoder_architecture

./: .gitignore  CITATION.bib  README.md
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/arm64-android/: CMakeLists.txt  Makefile  main.cpp
cpp/common/: image_utils.cpp  image_utils.h  multiscale_domain_detector_drt.cpp  multiscale_domain_detector_drt.h  partial_drt2.cpp  partial_drt2.h  partial_drt32.cpp  partial_drt32.h  partial_strided_drt.cpp  partial_strided_drt.h
cpp/generators/: argmaxth.cpp  convolutions.cpp  mdd_bar_detector.cpp  mdd_drt.cpp  pdrt2.cpp  pdrt2_bar_detector.cpp  pdrt2_threshold_jet.cpp  pdrt32.cpp  pdrt32_bar_detector.cpp  pdrt32_threshold_jet.cpp  ps_bar_detector.cpp  ps_drt.cpp  ps_threshold_jet.cpp  unpool.cpp
cpp/host/: CMakeLists.txt  api.cpp  main.cpp
latex/: main.tex  references.bib
latex/figures/: drawBasicIdea.m
latex/figures/results/: time_measurements.eps  time_measurements.tex
latex/figures/results/experimental/: angle.eps  angle.tex  scale.eps  scale.tex  threshold.eps  threshold.tex
latex/figures/singleScaleDetail/: singleScaleDetail.m
python/: README.md  camera.py  main.py  multiscale_domain_detector_drt.py  partial_drt.py  partial_strided_drt.py  requirements.txt
